# DoWhiz

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.aci  Dockerfile.base  Dockerfile.local  README.md  TECH_DESIGN.md  env.example.least  gateway_workflow.md  sandbox_test.txt  test_google_e2e.py  tmp_skills_smoke.sh  version_base.md5
.claude/: settings.local.json
DoWhiz_service/scheduler_module/: Cargo.toml  README.md
DoWhiz_service/scheduler_module/src/: account_store.rs  artifact_extractor.rs  blob_store.rs  channel.rs  collaboration_store.rs  discord_gateway.rs  employee_config.rs  env_alias.rs  github_inbound.rs  google_auth.rs  google_docs_poller.rs  google_drive_changes.rs  google_workspace_poller.rs  ingestion.rs  ingestion_queue.rs  lib.rs  mailbox.rs  memory_diff.rs  memory_queue.rs  memory_store.rs  message_router.rs  mongo_store.rs  notion_email_detector.rs  notion_store.rs  past_emails.rs  raw_payload_store.rs  secrets_store.rs  service.rs  service_bus_queue.rs  slack_store.rs  storage_backend.rs  web_auth_bootstrap.rs  workspace_bootstrap.rs
DoWhiz_service/scheduler_module/src/adapters/: bluebubbles.rs  discord.rs  google_docs.rs  image_search.rs  mod.rs  postmark.rs  slack.rs  telegram.rs  wechat.rs  whatsapp.rs
DoWhiz_service/scheduler_module/src/domain/: agent_roster.rs  artifact_queue.rs  mod.rs  resource_model.rs  starter_tasks.rs  workspace_blueprint.rs
DoWhiz_service/scheduler_module/src/gtm_agents/: contracts.rs  hubspot.rs  mod.rs  mode_a.rs  phase1.rs  phase2.rs  phase3.rs
DoWhiz_service/scheduler_module/src/index_store/: mod.rs
DoWhiz_service/scheduler_module/src/notion_browser/: agent_detector.rs  api_client.rs  browser.rs  mod.rs  models.rs  oauth_store.rs  operations.rs  parser.rs  poller.rs  store.rs
DoWhiz_service/scheduler_module/src/scheduler/: actions.rs  core.rs  executor.rs  mod.rs  outbound.rs  reply.rs  schedule.rs  snapshot.rs  store.rs  tests.rs  types.rs  utils.rs
DoWhiz_service/scheduler_module/src/service/: agent_market.rs  analytics.rs  auth.rs  billing.rs  config.rs  email.rs  html.rs  ingestion.rs  internal_dashboard.rs  postmark.rs  recipients.rs  scheduler.rs  server.rs  state.rs  workspace.rs
DoWhiz_service/scheduler_module/src/user_store/: mod.rs
DoWhiz_service/scheduler_module/tests/: billing_e2e.rs  email_html_e2e.rs  email_html_e2e_2.rs  email_verification_e2e.rs  github_env_e2e.rs  google_docs_cli_e2e.rs  google_workspace_cli_test.sh  google_workspace_e2e_test.sh  gtm_mode_a_e2e.rs  gtm_phase1_e2e.rs  gtm_phase2_e2e.rs  gtm_phase3_e2e.rs  memory_e2e.rs  scheduler_agent_e2e.rs  scheduler_concurrency.rs  scheduler_followups.rs  scheduler_retry_notifications_e2e.rs  scheduler_retry_notifications_slack_e2e.rs  scheduler_x402_env_e2e.rs  secrets_e2e.rs  send_reply_outbound_e2e.rs  service_real_email.rs  thread_latest_epoch_e2e.rs  unified_memo_e2e.rs
DoWhiz_service/scheduler_module/tests/test_support/: mod.rs
MVP/: Cargo.toml
MVP/src/: gmail_sender.rs  lib.rs
MVP/tests/: gmail_sender_integration.rs  gmail_sender_mock.rs
(+476 files in other folders)
