[package]
name = "dowhiz_mvp"
version = "0.1.0"
edition = "2021"

[lib]
name = "dowhiz_mvp"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
mime_guess = "2.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.10"
wiremock = "0.6"
