[package]
name = "scheduler_module"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
cron = "0.12"
dirs = "5"
dotenvy = "0.15"
hmac = "0.12"
hex = "0.4"
kuchiki = "0.8"
md5 = "0.7"
native-tls = "0.2"
postgres = { version = "0.19", features = ["with-uuid-1"] }
postgres-native-tls = "0.5"
r2d2 = "0.8"
r2d2_postgres = "0.18"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha1 = "0.10"
sha2 = "0.10"
toml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }

send_emails_module = { path = "../send_emails_module" }
run_task_module = { path = "../run_task_module" }

[[bin]]
name = "google-docs"
path = "src/bin/google_docs_cli.rs"

[dev-dependencies]
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder"] }
mockito = "1"
tempfile = "3"
